--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body{
-	background=#1485cc;
+	background:#1485cc;
 	font-family:Arial;
 	text-align:center;
-	color:#fff;
+	color:#0a0101;
 	}
 
 button{
